# NovaShell

./: .gitignore  LICENSE  README.md  package-lock.json
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: NovaShell_User_Guide.md
nexterm/: .gitignore  BUILD.md  FUNCIONALIDADES.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
nexterm/keys/: novaterm.key.pub
nexterm/scripts/: generate-icons.js
nexterm/src/: App.tsx
nexterm/src-tauri/: Cargo.toml  tauri.conf.json
nexterm/src-tauri/capabilities/: main.json
nexterm/src-tauri/icons/: icon.icns
nexterm/src-tauri/nsis/: installer.nsi
nexterm/src-tauri/resources/: .gitkeep
nexterm/src-tauri/src/: ai_manager.rs  collab_manager.rs  hacking_manager.rs  infra_monitor.rs  keychain_manager.rs  log_manager.rs  main.rs  pty_manager.rs  session_doc_manager.rs  sftp_manager.rs  ssh_manager.rs  system_info.rs
nexterm/src/components/: AIPanel.tsx  AchievementToast.tsx  Autocomplete.tsx  BackupPanel.tsx  CollabOverlay.tsx  CollabPanel.tsx  CommandPalette.tsx  DebugPanel.tsx  EditorPanel.tsx  FileExplorer.tsx  HackingPanel.tsx  InfraMonitorPanel.tsx  PanelContainer.tsx  SFTPPanel.tsx  SSHPanel.tsx  SearchOverlay.tsx  ServerMapPanel.tsx  SessionDocPanel.tsx  Sidebar.tsx  StatusBar.tsx  TabBar.tsx  TerminalPanel.tsx  TitleBar.tsx  UpdateNotification.tsx
nexterm/src/components/debug/: AnalysisView.tsx  PerformanceView.tsx  errorPatterns.ts
nexterm/src/components/hacking/: AiSecView.tsx  AlertToast.tsx  AlertsView.tsx  ExploitView.tsx  HistoryView.tsx  NetworkView.tsx  ReconView.tsx  ToolsView.tsx
nexterm/src/i18n/: en.ts  es.ts  index.tsx
nexterm/src/store/: appStore.ts
nexterm/src/styles/: global.css
nexterm/src/utils/: fileColors.ts  hackingAlerts.ts  markdown.ts  serverNavigation.ts  themeColors.ts
nexterm/tasks/: lessons.md  todo.md
tasks/: lessons.md  todo.md
