[package]
name = "novaterm"
version = "2.6.5"
description = "NovaShell - Modern Terminal Emulator"
authors = ["NovaShell Team"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
sysinfo = "0.30"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
ssh2 = "0.9"
socket2 = "0.5"
keyring = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt", "net", "sync", "macros", "time"] }
tokio-tungstenite = "0.24"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
rand = "0.8"

# On Windows, libssh2-sys defaults to the WinCNG crypto backend, which does
# NOT support ed25519 keys. Two features are needed:
#   - vendored-openssl: compiles OpenSSL from source (provides the library)
#   - openssl-on-win32: tells libssh2-sys build.rs to define LIBSSH2_OPENSSL
#     instead of LIBSSH2_WINCNG (without this, libssh2 ignores OpenSSL!)
# Unix/macOS already use OpenSSL by default, so no feature is needed there.
[target.'cfg(windows)'.dependencies]
ssh2 = { version = "0.9", features = ["vendored-openssl", "openssl-on-win32"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
